AC_INIT(src/mazacat.cpp)

AM_INIT_AUTOMAKE(mazacat, 20060418)

AC_PROG_CC
AC_PROG_CXX

AC_PROG_INSTALL


SDL_VERSION=1.2.7

AM_PATH_SDL($SDL_VERSION,
                       :,
	    AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
)

CFLAGS="$CFLAGS $SDL_CFLAGS"
LIBS="$LIBS $SDL_LIBS"

AC_CHECK_LIB(SDL_image, IMG_Load,, AC_MSG_ERROR(SDL_image is required. http://www.libsdl.org/))

LIBS="$LIBS -lSDL -lSDL_image"

AC_OUTPUT([
Makefile
src/Makefile
])

