bin_PROGRAMS = mazacat

mazacat_SOURCES = mazacat.cpp

EXTRA_DIST = \
charge.png \
chat.png \
chcsouri.png \
chcwasd.png \
chczqsd.png \
chgrp.png \
chien.png \
chiff30.png \
chiffres.png \
ecran2.png \
egalite.png \
grperr.png \
grpok.png \
licence.png \
menuchoi.png \
menu.png \
menusel.png \
niveaux \
pendant.png \
selhaut.png \
souris2.png \
souris3.png \
souris.png \
titre2.png \
titre.png \
verifgrp.png \
victchat.png \
victsour.png